web-infras/parser/tests/fixtures/babel/es2015/yield/function-name-generator-expression/output.txt
[SyntaxError]: 'yield' is only allowed within generator functions. (1,12)
1|+function* yield() {}
 |          ^
